objects/WT_Power_BI_Report__c.object
<CustomObject>
    <description>List of all Power BI Reports</description>
    <fields>
        <fullName>Report_Category__c</fullName>
        <label>Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Level__c</fullName>
        <label>Report Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Team Lead</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_CRE_ScoreCard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it CRE Score Card Report?</description>
        <label>CRE ScoreCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_MM_ScoreCard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it Middle Market Score Card Report?</description>
        <label>MM ScoreCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Report_ID__c</fullName>
        <description>Report ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Report ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Report_Type__c</fullName>
        <label>Report Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PowerBI</fullName>
                </value>
                <value>
                    <fullName>SSRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_User_Filter__c</fullName>
        <description>User Filter</description>
        <label>User Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Workspace_ID__c</fullName>
        <description>Workspace ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Workspace ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Power BI Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Report_Type__c</columns>
        <columns>WT_User_Filter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Power BI Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>